Found the solution